--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+
+    <script src="script.js"></script>
 </head>
 
 <body>
 
-    <input type="checkbox" id="checkbox">
+    <input type="checkbox" id="checkbox" onchange="toggle()">
     <label for="checkbox" class="toggle">
         <div class="bars" id="bar1"></div>
         <div class="bars" id="bar2"></div>
